[gd_scene load_steps=2 format=3 uid="uid://dq67os0d8dgrl"]

[ext_resource type="Script" uid="uid://6hwdu5xa80q5" path="res://addons/gdpackages/plugin/package_create_dialog.gd" id="1_weebb"]

[node name="PackageCreateDialog" type="ConfirmationDialog"]
oversampling_override = 1.0
title = "Package Creation"
position = Vector2i(0, 36)
size = Vector2i(516, 357)
visible = true
ok_button_text = "Create"
dialog_hide_on_ok = false
script = ExtResource("1_weebb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 300)
offset_left = 8.0
offset_top = 8.0
offset_right = 508.0
offset_bottom = 308.0

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "Path"

[node name="PackagePathEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "Name"

[node name="PackageNameEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "Version"

[node name="PackageVersion" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "v1.0"

[node name="PackageDescription" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Description"

[node name="ErrorMessage" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[color=red]Error Message[/color]"
fit_content = true
